# r-images-handler

./: .gitignore  DEVELOPMENT.md  README.md  TODO.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  main.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: file_service.rs  font_service.rs  image_service.rs  mod.rs  thumbnail_service.rs
src/components/batch/: BatchConvertDialog.tsx  BatchRenameDialog.tsx  BatchResizeDialog.tsx  BatchWatermarkDialog.tsx  CollageDialog.tsx
src/components/editor/: ColorSliders.tsx  ImageEditor.tsx
src/components/file-browser/: FolderTree.tsx
src/components/gallery/: ImageCard.tsx  ImageGrid.tsx  ImageListItem.tsx
src/components/layout/: FilterPopover.tsx  MainContent.tsx  MainLayout.tsx  PropertiesPanel.tsx  SelectedImagesPopover.tsx  SelectionToolbar.tsx  SettingsDialog.tsx  Sidebar.tsx  StatusBar.tsx  TaskQueue.tsx  Toolbar.tsx
src/components/preview/: QuickPreview.tsx
src/components/ui/: Button.tsx  ContextMenu.tsx  Histogram.tsx  Loading.tsx  Slider.tsx
src/services/: dbService.ts  tauriApi.ts
src/stores/: batchStore.ts  editorStore.ts  favoritesStore.ts  fileStore.ts  selectionStore.ts  tagStore.ts  uiStore.ts
