[package]
name = "r-images-handler"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "r_images_handler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 图片处理
image = "0.25"
imageproc = "0.24"
kamadak-exif = "0.5"
ab_glyph = "0.2"
font-kit = "0.11"

# 并行处理
rayon = "1.10"

# 文件系统
walkdir = "2.5"
notify = "6.1"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 工具库
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.22"
md5 = "0.7"
chrono = "0.4"
thiserror = "1.0"
dirs = "5.0"

